--- a/app/src/main/res/layout/card_layout.xml
+++ b/app/src/main/res/layout/card_layout.xml
@@ -17,7 +17,8 @@
         <LinearLayout
             android:orientation="vertical"
             android:layout_width="180dp"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+            android:id="@+id/ll_layout">
 
             <TextView
                 android:text="TextView"
