get Json object via URL via Volley

--- a/app/src/main/res/layout/card_layout.xml
+++ b/app/src/main/res/layout/card_layout.xml
@@ -20,14 +20,12 @@
             android:layout_height="match_parent"
             android:id="@+id/ll_layout">
 
-            <TextView
-                android:text="TextView"
+            <ImageView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:id="@+id/tv_source"
+                android:id="@+id/iv_source"
                 android:paddingBottom="1dp"
-                android:paddingLeft="1dp"
-                android:paddingTop="1dp" />
+                android:paddingLeft="1dp"/>
 
             <TextView
                 android:text="TextView"
@@ -44,8 +42,7 @@
                 android:layout_height="wrap_content"
                 android:id="@+id/tv_time"
                 android:paddingBottom="1dp"
-                android:paddingLeft="1dp"
-                android:paddingTop="1dp" />
+                android:paddingLeft="1dp" />
 
         </LinearLayout>
 
