--- a/app/src/main/res/layout/card_layout.xml
+++ b/app/src/main/res/layout/card_layout.xml
@@ -10,18 +10,21 @@
     card_view:cardElevation="4dp">
 
     <LinearLayout
-        android:orientation="horizontal"
-        android:layout_width="match_parent"
+        android:orientation="vertical"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content">
 
-        <LinearLayout
-            android:orientation="vertical"
-            android:layout_width="180dp"
-            android:layout_height="match_parent"
-            android:id="@+id/ll_layout">
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/iv_image"
+            android:paddingLeft="1dp"
+            android:adjustViewBounds="true"
+            android:cropToPadding="true"
+            android:layout_marginBottom="1dp"/>
 
             <ImageView
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:id="@+id/iv_source"
                 android:paddingBottom="1dp"
@@ -29,7 +32,7 @@
 
             <TextView
                 android:text="TextView"
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:id="@+id/tv_description"
                 android:paddingBottom="1dp"
@@ -38,20 +41,13 @@
 
             <TextView
                 android:text="TextView"
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:id="@+id/tv_time"
                 android:paddingBottom="1dp"
                 android:paddingLeft="1dp" />
 
-        </LinearLayout>
 
-        <ImageView
-            android:layout_width="match_parent"
-            android:id="@+id/iv_image"
-            android:paddingLeft="1dp"
-            android:adjustViewBounds="true"
-            android:cropToPadding="true"
-            android:layout_height="wrap_content" />
+
     </LinearLayout>
 </android.support.v7.widget.CardView>
