--- a/app/src/main/res/layout/card_big_image.xml
+++ b/app/src/main/res/layout/card_big_image.xml
@@ -1,35 +1,50 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="horizontal" android:layout_width="match_parent"
+<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:card_view="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="5dp"
+        card_view:cardCornerRadius="4dp"
+        card_view:cardElevation="4dp"
+        android:paddingLeft="16dp"
+        android:paddingRight="16dp">
+<RelativeLayout
+    android:layout_width="match_parent"
     android:layout_height="match_parent">
-
-
     <ImageView
         android:id="@+id/iv_bi_image"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_weight="1" />
+        android:scaleType="fitCenter" />
 
     <TextView
         android:id="@+id/tv_bi_source"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:text="TextView" />
+        android:text="TextView"
+        android:paddingTop="3dp"
+        android:layout_below="@id/iv_bi_image"
+        android:layout_alignParentLeft="true"/>
 
     <TextView
-            android:id="@+id/tv_bi_title"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="TextView" />
+        android:id="@+id/tv_bi_title"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="TextView"
+        android:paddingTop="3dp"
+        android:layout_below="@id/tv_bi_source"
+        android:layout_alignParentLeft="true"/>
 
     <TextView
-            android:id="@+id/tv_bi_time"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="TextView" />
+        android:id="@+id/tv_bi_time"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="TextView"
+        android:paddingTop="3dp"
+        android:layout_below="@id/tv_bi_title"
+        android:layout_alignParentLeft="true"/>
 
-</LinearLayout>
+</RelativeLayout>
+
+</android.support.v7.widget.CardView>
