--- a/app/src/main/res/layout/card_vertical_image.xml
+++ b/app/src/main/res/layout/card_vertical_image.xml
@@ -9,42 +9,47 @@
     card_view:cardElevation="4dp"
     android:paddingLeft="16dp"
     android:paddingRight="16dp">
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
-        <ImageView
-            android:id="@+id/iv_vi_image"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:scaleType="fitCenter" />
 
-        <TextView
-            android:id="@+id/tv_vi_source"
+        <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="TextView"
-            android:paddingTop="3dp"
-            android:layout_below="@id/iv_bi_image"
-            android:layout_alignParentLeft="true"/>
+            android:layout_height="match_parent">
 
-        <TextView
-            android:id="@+id/tv_vi_title"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="TextView"
-            android:paddingTop="3dp"
-            android:layout_below="@id/tv_bi_source"
-            android:layout_alignParentLeft="true"/>
+            <ImageView
+                android:id="@+id/iv_vi_image"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentRight="true"
+                android:layout_weight="1"/>
 
-        <TextView
-            android:id="@+id/tv_vi_time"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="TextView"
-            android:paddingTop="3dp"
-            android:layout_below="@id/tv_bi_title"
-            android:layout_alignParentLeft="true"/>
+            <TextView
+                android:id="@+id/tv_vi_source"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_alignParentLeft="true"
+                android:paddingTop="3dp"
+                android:text="TextView" />
 
-    </RelativeLayout>
+            <TextView
+                android:id="@+id/tv_vi_title"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_alignParentLeft="true"
+                android:layout_below="@id/tv_vi_source"
+                android:paddingTop="3dp"
+                android:text="TextView" />
+
+            <TextView
+                android:id="@+id/tv_vi_time"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_alignParentLeft="true"
+                android:layout_below="@id/tv_vi_title"
+                android:paddingBottom="3dp"
+                android:paddingTop="3dp"
+                android:text="TextView" />
+
+        </RelativeLayout>
+
+
 
 </android.support.v7.widget.CardView>
