--- a/app/src/main/res/layout/card_big_image.xml
+++ b/app/src/main/res/layout/card_big_image.xml
@@ -14,9 +14,10 @@
     android:layout_height="match_parent">
     <ImageView
         android:id="@+id/iv_bi_image"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:scaleType="fitCenter" />
+        android:adjustViewBounds="true"
+        android:scaleType="centerCrop"/>
 
     <TextView
         android:id="@+id/tv_bi_source"
