--- a/app/src/main/res/layout/card_vertical_image.xml
+++ b/app/src/main/res/layout/card_vertical_image.xml
@@ -16,10 +16,11 @@
 
             <ImageView
                 android:id="@+id/iv_vi_image"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
                 android:layout_alignParentRight="true"
-                android:layout_weight="1"/>
+                android:adjustViewBounds="true"
+                android:scaleType="centerCrop"/>
 
             <TextView
                 android:id="@+id/tv_vi_source"
