--- a/app/src/main/res/layout/card_horizonal_image.xml
+++ b/app/src/main/res/layout/card_horizonal_image.xml
@@ -11,7 +11,8 @@ android:paddingLeft="16dp"
 android:paddingRight="16dp">
 <RelativeLayout
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:orientation="horizontal">
     <ImageView
         android:id="@+id/iv_hi_image"
         android:layout_width="wrap_content"
@@ -23,9 +24,7 @@ android:paddingRight="16dp">
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="TextView"
-        android:paddingTop="3dp"
-        android:layout_below="@id/iv_hi_image"
-        android:layout_alignParentLeft="true"/>
+        android:layout_toRightOf="@+id/iv_hi_image"/>
 
     <TextView
         android:id="@+id/tv_hi_source"
@@ -34,7 +33,7 @@ android:paddingRight="16dp">
         android:text="TextView"
         android:paddingTop="3dp"
         android:layout_below="@id/tv_hi_title"
-        android:layout_alignParentLeft="true"/>
+        android:layout_toRightOf="@+id/iv_hi_image"/>
 
     <TextView
         android:id="@+id/tv_hi_time"
@@ -43,8 +42,7 @@ android:paddingRight="16dp">
         android:text="TextView"
         android:paddingTop="3dp"
         android:layout_below="@id/tv_hi_source"
-        android:layout_alignParentLeft="true"
-        android:paddingBottom="3dp"/>
+        android:layout_toRightOf="@id/iv_hi_image"/>
 
 </RelativeLayout>
 
