--- a/app/src/main/res/layout/card_vertical_image.xml
+++ b/app/src/main/res/layout/card_vertical_image.xml
@@ -10,47 +10,49 @@
     android:paddingLeft="16dp"
     android:paddingRight="16dp">
 
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="horizontal">
 
-            <ImageView
-                android:id="@+id/iv_vi_image"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_alignParentRight="true"
-                android:adjustViewBounds="true"
-                android:scaleType="centerCrop"/>
+        <ImageView
+            android:id="@+id/iv_vi_image"
+            android:layout_width="120dp"
+            android:layout_height="73dp"
+            android:layout_alignParentLeft="true"
+            android:adjustViewBounds="true"
+            android:paddingTop="3dp"
+            android:scaleType="fitXY" />
 
             <TextView
                 android:id="@+id/tv_vi_source"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_alignParentLeft="true"
-                android:paddingTop="3dp"
+                android:layout_toRightOf="@+id/iv_vi_image"
+                android:paddingLeft="3dp"
                 android:text="TextView" />
 
             <TextView
                 android:id="@+id/tv_vi_title"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_alignParentLeft="true"
-                android:layout_below="@id/tv_vi_source"
+                android:layout_toRightOf="@id/iv_vi_image"
+                android:layout_below="@+id/tv_vi_source"
                 android:paddingTop="3dp"
+                android:paddingLeft="3dp"
                 android:text="TextView" />
 
             <TextView
                 android:id="@+id/tv_vi_time"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_alignParentLeft="true"
-                android:layout_below="@id/tv_vi_title"
-                android:paddingBottom="3dp"
+                android:layout_toRightOf="@id/iv_vi_image"
+                android:layout_below="@+id/tv_vi_title"
                 android:paddingTop="3dp"
+                android:paddingLeft="3dp"
                 android:text="TextView" />
 
-        </RelativeLayout>
 
-
+    </RelativeLayout>
 
 </android.support.v7.widget.CardView>
