display japanese characters vertically, only show one line.

--- a/app/src/main/res/layout/card_horizonal_image.xml
+++ b/app/src/main/res/layout/card_horizonal_image.xml
@@ -1,49 +1,58 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
-xmlns:card_view="http://schemas.android.com/apk/res-auto"
-xmlns:tools="http://schemas.android.com/tools"
-android:layout_width="match_parent"
-android:layout_height="wrap_content"
-android:layout_margin="5dp"
-card_view:cardCornerRadius="4dp"
-card_view:cardElevation="4dp"
-android:paddingLeft="16dp"
-android:paddingRight="16dp">
-<RelativeLayout
+    xmlns:card_view="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="horizontal">
-    <ImageView
-        android:id="@+id/iv_hi_image"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:scaleType="fitCenter" />
+    android:layout_height="wrap_content"
+    android:layout_margin="5dp"
+    card_view:cardCornerRadius="4dp"
+    card_view:cardElevation="4dp"
+    android:paddingLeft="16dp"
+    android:paddingRight="16dp">
 
-    <TextView
-        android:id="@+id/tv_hi_title"
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="TextView"
-        android:layout_toRightOf="@+id/iv_hi_image"/>
+        android:layout_height="match_parent"
+        android:orientation="horizontal">
 
-    <TextView
-        android:id="@+id/tv_hi_source"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="TextView"
-        android:paddingTop="3dp"
-        android:layout_below="@id/tv_hi_title"
-        android:layout_toRightOf="@+id/iv_hi_image"/>
+        <ImageView
+            android:id="@+id/iv_hi_image"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentLeft="true"
+            android:adjustViewBounds="true"
+            android:paddingTop="3dp"
+            android:scaleType="fitXY" />
 
-    <TextView
-        android:id="@+id/tv_hi_time"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="TextView"
-        android:paddingTop="3dp"
-        android:layout_below="@id/tv_hi_source"
-        android:layout_toRightOf="@id/iv_hi_image"/>
+            <TextView
+                android:id="@+id/tv_hi_source"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_toRightOf="@+id/iv_hi_image"
+                android:paddingLeft="3dp"
+                android:text="TextView" />
 
-</RelativeLayout>
+            <TextView
+                android:id="@+id/tv_hi_title"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_toRightOf="@id/iv_hi_image"
+                android:layout_below="@+id/tv_hi_source"
+                android:paddingTop="3dp"
+                android:paddingLeft="3dp"
+                android:text="TextView" />
+
+            <TextView
+                android:id="@+id/tv_hi_time"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_toRightOf="@id/iv_hi_image"
+                android:layout_below="@+id/tv_hi_title"
+                android:paddingTop="3dp"
+                android:paddingLeft="3dp"
+                android:text="TextView" />
+
+
+    </RelativeLayout>
 
 </android.support.v7.widget.CardView>
