--- a/app/src/main/res/layout/card_vertical_image.xml
+++ b/app/src/main/res/layout/card_vertical_image.xml
@@ -1,58 +1,52 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:card_view="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+xmlns:card_view="http://schemas.android.com/apk/res-auto"
+xmlns:tools="http://schemas.android.com/tools"
+android:layout_width="match_parent"
+android:layout_height="wrap_content"
+android:layout_margin="5dp"
+card_view:cardCornerRadius="4dp"
+card_view:cardElevation="4dp"
+android:paddingLeft="16dp"
+android:paddingRight="16dp">
+<RelativeLayout
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:layout_margin="5dp"
-    card_view:cardCornerRadius="4dp"
-    card_view:cardElevation="4dp"
-    android:paddingLeft="16dp"
-    android:paddingRight="16dp">
-
-    <RelativeLayout
+    android:layout_height="match_parent"
+    android:orientation="horizontal">
+    <ImageView
+        android:id="@+id/iv_vi_image"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="horizontal">
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:scaleType="fitCenter" />
 
-        <ImageView
-            android:id="@+id/iv_vi_image"
-            android:layout_width="120dp"
-            android:layout_height="73dp"
-            android:layout_alignParentLeft="true"
-            android:adjustViewBounds="true"
-            android:paddingTop="3dp"
-            android:scaleType="fitXY" />
+    <TextView
+        android:id="@+id/tv_vi_title"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="TextView"
+        android:layout_toRightOf="@+id/iv_vi_image"
+        android:gravity="center"
+        android:paddingRight="5dp"/>
 
-            <TextView
-                android:id="@+id/tv_vi_source"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_toRightOf="@+id/iv_vi_image"
-                android:paddingLeft="3dp"
-                android:text="TextView" />
+    <TextView
+        android:id="@+id/tv_vi_source"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="TextView"
+        android:paddingTop="3dp"
+        android:layout_alignParentLeft="true"
+        android:layout_below="@+id/iv_vi_image"/>
 
-            <TextView
-                android:id="@+id/tv_vi_title"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_toRightOf="@id/iv_vi_image"
-                android:layout_below="@+id/tv_vi_source"
-                android:paddingTop="3dp"
-                android:paddingLeft="3dp"
-                android:text="TextView" />
+    <TextView
+        android:id="@+id/tv_vi_time"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="TextView"
+        android:paddingTop="3dp"
+        android:layout_alignParentRight="true"
+        android:layout_below="@+id/tv_vi_source"/>
 
-            <TextView
-                android:id="@+id/tv_vi_time"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_toRightOf="@id/iv_vi_image"
-                android:layout_below="@+id/tv_vi_title"
-                android:paddingTop="3dp"
-                android:paddingLeft="3dp"
-                android:text="TextView" />
-
-
-    </RelativeLayout>
+</RelativeLayout>
 
 </android.support.v7.widget.CardView>
