--- a/app/src/main/res/layout/card_vertical_text.xml
+++ b/app/src/main/res/layout/card_vertical_text.xml
@@ -1,10 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.example.leiwang.messagecardview.adapter.VerticalTextView xmlns:android="http://schemas.android.com/apk/res/android"
-android:layout_width="match_parent"
-android:layout_height="wrap_content"
-android:layout_margin="5dp"
-android:paddingLeft="16dp"
-android:paddingRight="16dp">
+<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:card_view="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:layout_margin="5dp"
+    card_view:cardCornerRadius="4dp"
+    card_view:cardElevation="4dp"
+    android:paddingLeft="16dp"
+    android:paddingRight="16dp">
 <RelativeLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -18,4 +22,4 @@ android:paddingRight="16dp">
 
 </RelativeLayout>
 
-</com.example.leiwang.messagecardview.adapter.VerticalTextView>
+</android.support.v7.widget.CardView>
