--- a/app/src/main/res/layout/card_big_image.xml
+++ b/app/src/main/res/layout/card_big_image.xml
@@ -5,8 +5,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="5dp"
-        card_view:cardCornerRadius="4dp"
-        card_view:cardElevation="4dp"
+        card_view:cardCornerRadius="5dp"
+        card_view:cardElevation="8dp"
         android:paddingLeft="16dp"
         android:paddingRight="16dp">
 <RelativeLayout
@@ -35,7 +35,8 @@
         android:text="TextView"
         android:paddingTop="3dp"
         android:layout_below="@id/tv_bi_source"
-        android:layout_alignParentLeft="true"/>
+        android:layout_alignParentLeft="true"
+        android:textSize="20dp"/>
 
     <TextView
         android:id="@+id/tv_bi_time"
