--- a/app/src/main/res/layout/card_horizonal_image.xml
+++ b/app/src/main/res/layout/card_horizonal_image.xml
@@ -5,8 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_margin="5dp"
-    card_view:cardCornerRadius="4dp"
-    card_view:cardElevation="4dp"
+    card_view:cardCornerRadius="5dp"
+    card_view:cardElevation="8dp"
     android:paddingLeft="16dp"
     android:paddingRight="16dp">
 
@@ -40,7 +40,8 @@
                 android:layout_below="@+id/tv_hi_source"
                 android:paddingTop="3dp"
                 android:paddingLeft="3dp"
-                android:text="TextView" />
+                android:text="TextView"
+                android:textSize="20dp"/>
 
             <TextView
                 android:id="@+id/tv_hi_time"
