--- a/app/src/main/res/layout/card_vertical_image.xml
+++ b/app/src/main/res/layout/card_vertical_image.xml
@@ -5,8 +5,8 @@ xmlns:tools="http://schemas.android.com/tools"
 android:layout_width="match_parent"
 android:layout_height="wrap_content"
 android:layout_margin="5dp"
-card_view:cardCornerRadius="4dp"
-card_view:cardElevation="4dp"
+card_view:cardCornerRadius="5dp"
+card_view:cardElevation="8dp"
 android:paddingLeft="16dp"
 android:paddingRight="16dp">
 <RelativeLayout
@@ -27,7 +27,8 @@ android:paddingRight="16dp">
         android:text="TextView"
         android:layout_toRightOf="@+id/iv_vi_image"
         android:gravity="center"
-        android:paddingRight="5dp"/>
+        android:paddingRight="5dp"
+        android:textSize="20dp"/>
 
     <TextView
         android:id="@+id/tv_vi_source"
