--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,6 +10,36 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.example.leiwang.messagecardview.activity.MainActivity">
 
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:background="?attr/colorPrimary"
+        android:elevation="6dp"
+        android:minHeight="?attr/actionBarSize"
+        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
+        />
+
+    <android.support.design.widget.TabLayout
+        android:id="@+id/tab_layout"
+        android:layout_below="@+id/toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="?attr/colorPrimary"
+        android:elevation="6dp"
+        android:minHeight="?attr/actionBarSize"
+        />
+
+    <android.support.v4.view.ViewPager
+        android:id="@+id/viewpager"
+        android:layout_below="@+id/tab_layout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        />
+
+
+
     <Button
         android:id="@+id/bt_login"
         android:layout_width="wrap_content"
@@ -18,13 +48,13 @@
         android:text="Login"
         android:layout_alignParentTop="true"
         android:visibility="visible"/>
-
+<!--
     <android.support.v7.widget.RecyclerView
         android:id="@+id/messageList"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_below="@+id/bt_login">
+        android:layout_height="match_parent">
     </android.support.v7.widget.RecyclerView>
+
 
     <Button
         android:id="@+id/bt_top"
@@ -36,6 +66,6 @@
         android:layout_marginBottom="22dp"
         android:text="Top"
         android:visibility="visible"/>
-
+       -->
 
 </RelativeLayout>
