add action bar that take all channel

--- a/app/src/main/res/layout/forgot_password.xml
+++ b/app/src/main/res/layout/forgot_password.xml
@@ -21,25 +21,16 @@
         android:hint="@string/enter_email"
         android:inputType="textEmailAddress" />
 
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_gravity="center">
-
-        <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/forgot_cancel_btn"
-            android:text="@string/cancel"/>
 
         <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/forgot_send_btn"
+            android:layout_marginTop="30dp"
+            android:layout_gravity="center"
             android:layout_toRightOf="@+id/forgot_cancel_btn"
             android:text="@string/send"/>
 
 
-    </RelativeLayout>
 
 </LinearLayout>
