--- a/app/src/main/res/layout/register_layout.xml
+++ b/app/src/main/res/layout/register_layout.xml
@@ -47,6 +47,25 @@ android:orientation="vertical">
         android:inputType="textEmailAddress" />
 
     <TextView
+        android:id="@+id/register_tv_email2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dip"
+        android:gravity="center"
+        android:textColor="#000000"
+        android:text="@string/re_email"
+        />
+
+    <EditText
+        android:id="@+id/register_et_email2"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="5dip"
+        android:hint="@string/enter_email"
+        android:inputType="textEmailAddress" />
+
+
+    <TextView
         android:id="@+id/register_tv_password"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -64,38 +83,33 @@ android:orientation="vertical">
         android:hint="@string/enter_password"
         android:inputType="textPassword" />
 
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginTop="10dip">
+    <TextView
+        android:id="@+id/register_tv_password2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="15dip"
+        android:gravity="center"
+        android:textColor="#000000"
+        android:text="@string/re_password"
+        />
 
-        <Button
-            android:id="@+id/register_cancel_button"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:text="@string/cancel"
-            />
+    <EditText
+        android:id="@+id/register_et_password2"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="5dip"
+        android:hint="@string/enter_password"
+        android:inputType="textPassword" />
 
         <Button
             android:id="@+id/registerButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:layout_toRightOf="@+id/register_cancel_button"
+            android:layout_marginTop="30dip"
             android:text="@string/register"
             />
 
-        <Button
-            android:id="@+id/register_btn_login"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="@string/already_user"
-            android:layout_gravity="center"
-            android:layout_below="@+id/registerButton"/>
-
-    </RelativeLayout>
 
 
 </LinearLayout>
