--- a/app/src/main/res/layout/login_layout.xml
+++ b/app/src/main/res/layout/login_layout.xml
@@ -4,95 +4,66 @@ android:layout_width="fill_parent"
 android:layout_height="fill_parent"
 android:orientation="vertical" >
 
-<LinearLayout
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
-    android:layout_margin="10dip"
-    android:orientation="vertical" >
-
-    <TextView
-        android:id="@+id/login_tv_username"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="10dip"
-        android:gravity="center"
-        android:textColor="#000000"
-        android:text="@string/username"
-        />
-
-    <EditText
-        android:id="@+id/login_et_username"
+    <LinearLayout
         android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="5dip"
-        android:hint="@string/enter_username"
-        android:inputType="textEmailAddress" />
+        android:layout_height="fill_parent"
+        android:layout_margin="10dip"
+        android:orientation="vertical">
 
-    <TextView
-        android:id="@+id/login_tv_password"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="15dip"
-        android:gravity="center"
-        android:textColor="#000000"
-        android:text="@string/password"
-        />
-
-    <EditText
-        android:id="@+id/login_et_password"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="5dip"
-        android:hint="@string/enter_password"
-        android:inputType="textPassword" />
-
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginTop="15dip"
-        android:layout_gravity="center_horizontal">
-
-        <Button
+        <TextView
+            android:id="@+id/login_tv_username"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:text="@string/forgot_password"
-            android:id="@+id/login_forgot_password_btn"
-            android:layout_alignParentLeft="true"
-            />
-        <Button
-            android:id="@+id/longin_cancel_button"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/cancel"
-            android:layout_below="@+id/login_forgot_password_btn"
-            />
+            android:layout_marginTop="10dip"
+            android:gravity="center"
+            android:text="@string/username"
+            android:textColor="#000000" />
 
-        <Button
-            android:id="@+id/loginButton"
-            android:layout_width="wrap_content"
+        <EditText
+            android:id="@+id/login_et_username"
+            android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_toRightOf="@+id/longin_cancel_button"
-            android:layout_below="@+id/login_forgot_password_btn"
-            android:text="@string/login"
-            />
+            android:layout_marginTop="5dip"
+            android:hint="@string/enter_username"
+            android:inputType="textEmailAddress" />
 
-        <Button
-            android:id="@+id/login_btn_register"
+        <TextView
+            android:id="@+id/login_tv_password"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="15dip"
-            android:text="@string/not_user_yet"
-            android:layout_below="@+id/loginButton"
-            android:layout_alignParentRight="true"/>
+            android:gravity="center"
+            android:text="@string/password"
+            android:textColor="#000000" />
 
-    </RelativeLayout>
+        <EditText
+            android:id="@+id/login_et_password"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="5dip"
+            android:hint="@string/enter_password"
+            android:inputType="textPassword" />
 
 
 
+            <Button
+                android:id="@+id/loginButton"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginTop="20dip"
+                android:text="@string/login" />
 
 
-</LinearLayout>
+            <Button
+                android:id="@+id/login_forgot_password_btn"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="20dp"
+                android:layout_gravity="center"
+                android:text="@string/forgot_password" />
+
+
+    </LinearLayout>
 
 </LinearLayout>
