change menu title dynamically

--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -17,53 +17,62 @@
         android:id="@+id/action_domestic"
         android:orderInCategory="100"
         android:title="@string/domestic"
+        android:itemBackground="@color/blue"
         app:showAsAction="ifRoom"/>
 
     <item
         android:id="@+id/action_international"
         android:orderInCategory="100"
         android:title="@string/international"
+        android:itemBackground="@color/purple"
         app:showAsAction="ifRoom"/>
 
     <item
         android:id="@+id/action_business"
         android:orderInCategory="100"
         android:title="@string/business"
+        android:itemBackground="@color/green"
         app:showAsAction="ifRoom"/>
 
     <item
         android:id="@+id/action_entertainment"
         android:orderInCategory="100"
         android:title="@string/entertainment"
+        android:itemBackground="@color/orange"
         app:showAsAction="ifRoom"/>
 
     <item
         android:id="@+id/action_sport"
         android:orderInCategory="100"
         android:title="@string/sport"
+        android:itemBackground="@color/red"
         app:showAsAction="ifRoom"/>
 
     <item
         android:id="@+id/action_science"
         android:orderInCategory="100"
         android:title="@string/science"
+        android:itemBackground="@color/maroon"
         app:showAsAction="ifRoom"/>
 
     <item
         android:id="@+id/action_life"
         android:orderInCategory="100"
         android:title="@string/life"
+        android:itemBackground="@color/olive"
         app:showAsAction="ifRoom"/>
 
     <item
         android:id="@+id/action_local"
         android:orderInCategory="100"
         android:title="@string/local"
+        android:itemBackground="@color/fuchsia"
         app:showAsAction="ifRoom"/>
 
     <item
         android:id="@+id/action_magazine"
         android:orderInCategory="100"
         android:title="@string/magazine"
+        android:itemBackground="@color/aqua"
         app:showAsAction="ifRoom"/>
 </menu>
