--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -3,14 +3,15 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
-        android:id="@+id/action_login"
+        android:id="@+id/action_login_or_register"
         android:orderInCategory="100"
         android:title="@string/login"
         app:showAsAction="ifRoom"/>
     <item
-        android:id="@+id/action_register"
+        android:id="@+id/action_refresh"
         android:orderInCategory="100"
-        android:title="@string/register"
+        android:title="@string/refresh"
+        android:icon="@drawable/ic_refresh_black_24dp"
         app:showAsAction="ifRoom"/>
 
     <item
