fix bug on dialog

--- a/app/src/main/res/layout/forgot_password.xml
+++ b/app/src/main/res/layout/forgot_password.xml
@@ -22,15 +22,27 @@
         android:inputType="textEmailAddress" />
 
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="horizontal"
+        android:gravity="center"
+        android:layout_marginTop="30dp">
+
         <Button
+            android:id="@+id/forgot_send_btn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/forgot_send_btn"
-            android:layout_marginTop="30dp"
-            android:layout_gravity="center"
-            android:layout_toRightOf="@+id/forgot_cancel_btn"
-            android:text="@string/send"/>
+            android:layout_weight="1"
+            android:text="@string/send" />
 
+        <Button
+            android:id="@+id/btn_forgot_cancel"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="@string/cancel" />
+    </LinearLayout>
 
 
 </LinearLayout>
