--- a/app/src/main/res/layout/login_or_register.xml
+++ b/app/src/main/res/layout/login_or_register.xml
@@ -34,4 +34,12 @@
         android:layout_marginTop="20dp"
         android:layout_gravity="center"
         android:text="@string/login" />
+
+    <Button
+        android:id="@+id/btn_login_register_cancel"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="30dp"
+        android:layout_gravity="center"
+        android:text="@string/cancel" />
 </LinearLayout>
