--- a/app/src/main/res/layout/register_layout.xml
+++ b/app/src/main/res/layout/register_layout.xml
@@ -4,11 +4,6 @@ android:layout_width="fill_parent"
 android:layout_height="fill_parent"
 android:orientation="vertical">
 
-<LinearLayout
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
-    android:layout_margin="10dip"
-    android:orientation="vertical" >
 
     <TextView
         android:id="@+id/register_tv_username"
@@ -101,17 +96,31 @@ android:orientation="vertical">
         android:hint="@string/enter_password"
         android:inputType="textPassword" />
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginTop="30dp"
+        android:gravity="center"
+        android:orientation="horizontal">
+
         <Button
             android:id="@+id/registerButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_marginTop="30dip"
-            android:text="@string/register"
-            />
+            android:text="@string/register" />
 
+        <Button
+            android:id="@+id/btn_register_cancel"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/cancel" />
+    </LinearLayout>
 
+    <Button
+        android:id="@+id/button2"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Button" />
 
-</LinearLayout>
 
 </LinearLayout>
