--- a/app/src/main/res/layout/forgot_password.xml
+++ b/app/src/main/res/layout/forgot_password.xml
@@ -19,12 +19,13 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="5dip"
         android:hint="@string/enter_email"
+        android:textColorHint="@color/white"
         android:inputType="textEmailAddress" />
 
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="87dp"
         android:orientation="horizontal"
         android:gravity="center"
         android:layout_marginTop="30dp">
