--- a/app/src/main/res/layout/login_or_register.xml
+++ b/app/src/main/res/layout/login_or_register.xml
@@ -7,9 +7,9 @@
         android:id="@+id/textView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="10dp"
         android:gravity="center"
-        android:text="Have not register yet, please register here: " />
+        android:text="@string/not_register_yet" />
 
     <Button
         android:id="@+id/btn_register"
@@ -23,9 +23,9 @@
         android:id="@+id/textView2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="40dp"
+        android:layout_marginTop="20dp"
         android:gravity="center"
-        android:text="Already registerd? login here: " />
+        android:text="@string/register_already" />
 
     <Button
         android:id="@+id/btn_login"
@@ -39,7 +39,7 @@
         android:id="@+id/btn_login_register_cancel"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="30dp"
+        android:layout_marginTop="20dp"
         android:layout_gravity="center"
         android:text="@string/cancel" />
 </LinearLayout>
