--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -6,6 +6,7 @@
         android:id="@+id/action_login_or_register"
         android:orderInCategory="100"
         android:title="@string/login"
+        android:icon="@drawable/ic_menu_login"
         app:showAsAction="ifRoom"/>
     <item
         android:id="@+id/action_refresh"
@@ -76,4 +77,13 @@
         android:title="@string/magazine"
         android:itemBackground="@color/aqua"
         app:showAsAction="ifRoom"/>
+
+    <item
+        android:id="@+id/action_share"
+        android:title="Share"
+        android:icon="@drawable/ic_menu_share"
+        android:actionProviderClass=
+            "android.widget.ShareActionProvider"
+        app:showAsAction="ifRoom"/>
+
 </menu>
